[gd_scene load_steps=16 format=3 uid="uid://b5ldgx3ugik3d"]

[ext_resource type="Texture2D" uid="uid://cqd1d2efgvkst" path="res://assets/player bg role.PNG" id="1_ev4sg"]
[ext_resource type="Script" uid="uid://cc8fqhx47nctd" path="res://godot/scenes/PlayRoleStart.gd" id="1_imxm1"]
[ext_resource type="FontFile" uid="uid://es04xj3f3psf" path="res://assets/Pixel Game.otf" id="2_ccs2q"]
[ext_resource type="Texture2D" uid="uid://cbl22g4vux82" path="res://assets/characters/ChatGPT Image Sep 14, 2025, 06_54_13 PM.png" id="3_uopxi"]
[ext_resource type="AudioStream" uid="uid://jac4oupgr4kq" path="res://assets/sound fx/mixkit-select-click-1109.wav" id="5_br1up"]
[ext_resource type="AudioStream" uid="uid://bjjavoq2sedoy" path="res://assets/sound fx/Simulacra-chosic.com_.mp3" id="6_br1up"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_58tb1"]
texture = ExtResource("1_ev4sg")
modulate_color = Color(0.835294, 0.835294, 0.835294, 0.803922)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0jqho"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(79, 213, 397, 598)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uopxi"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(58, 184, 443, 660)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_imxm1"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(551, 201, 430, 601)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_07qmp"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(530, 184, 472, 660)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_br1up"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(1056, 205, 405, 610)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t4off"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(1035, 188, 443, 648)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4d1t7"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(1056, 205, 410, 610)
modulate_color = Color(0.347817, 0.347817, 0.347817, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_phxxa"]
texture = ExtResource("3_uopxi")
texture_margin_top = 13.0
region_rect = Rect2(1056, 205, 405, 610)

[node name="PlayRoleStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imxm1")

[node name="bg_char" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -9.0
offset_right = -4.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_58tb1")

[node name="selection_label" type="Label" parent="."]
layout_mode = 0
offset_left = 293.0
offset_top = 55.0
offset_right = 808.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("2_ccs2q")
theme_override_font_sizes/font_size = 60
text = "select your Character"
horizontal_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]

[node name="char1_Button" type="Button" parent="TouchScreenButton"]
offset_left = 176.0
offset_top = 251.0
offset_right = 371.0
offset_bottom = 475.0
theme_override_styles/focus = SubResource("StyleBoxTexture_0jqho")
theme_override_styles/hover = SubResource("StyleBoxTexture_uopxi")
theme_override_styles/normal = SubResource("StyleBoxTexture_0jqho")

[node name="char2_Button" type="Button" parent="TouchScreenButton"]
offset_left = 471.0
offset_top = 251.0
offset_right = 666.0
offset_bottom = 475.0
theme_override_styles/focus = SubResource("StyleBoxTexture_imxm1")
theme_override_styles/hover = SubResource("StyleBoxTexture_07qmp")
theme_override_styles/normal = SubResource("StyleBoxTexture_imxm1")

[node name="char3_Button" type="Button" parent="TouchScreenButton"]
offset_left = 780.0
offset_top = 246.0
offset_right = 975.0
offset_bottom = 470.0
theme_override_styles/focus = SubResource("StyleBoxTexture_br1up")
theme_override_styles/hover = SubResource("StyleBoxTexture_t4off")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4d1t7")
theme_override_styles/normal = SubResource("StyleBoxTexture_phxxa")

[node name="hover_fx" type="AudioStreamPlayer" parent="TouchScreenButton"]
stream = ExtResource("5_br1up")
volume_db = -16.0

[node name="bg fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_br1up")
autoplay = true

[connection signal="mouse_entered" from="TouchScreenButton/char1_Button" to="." method="_on_char_1_button_mouse_entered"]
[connection signal="pressed" from="TouchScreenButton/char1_Button" to="." method="_on_char_1_button_pressed"]
[connection signal="mouse_entered" from="TouchScreenButton/char2_Button" to="." method="_on_char_2_button_mouse_entered"]
[connection signal="pressed" from="TouchScreenButton/char2_Button" to="." method="_on_char_2_button_pressed"]
[connection signal="mouse_entered" from="TouchScreenButton/char3_Button" to="." method="_on_char_3_button_mouse_entered"]
[connection signal="pressed" from="TouchScreenButton/char3_Button" to="." method="_on_char_3_button_pressed"]
